--- a/src/app/post/post-form/post-form.component.html
+++ b/src/app/post/post-form/post-form.component.html
@@ -60,12 +60,10 @@
 
         <div class="row">
             <div class="col-md-2">
-                <button type="submit" class="btn btn-success" *ngIf="!post.id">
+                <button type="submit" class="btn btn-success" >
                     <i class="fa fa-save" ></i> Salvar
                 </button>
-                <button type="submit" class="btn btn-primary" *ngIf="post.id">
-                    <i class="fa fa-sync-alt" ></i> Atualizar
-                </button>
+
             </div>
             <div class="col-md-2">
                 <button type="button" class="btn btn-danger" (click)="voltarParaLista()">
