--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,12 @@
 <div class="bg-primary">
-    <div id="layoutAuthenticatication">
+    <div class="bg" id="layoutAuthenticatication">
         <div id="layoutAuthentication_content">
             <main>
                 <div class="container">
+                    
                     <div class="row justify-content-center">
                         <div class="col-lg-5">
-                            <div class="card shadow-lg border-0 rounded-lg mt-5">
+                            <div class="card shadow-lg border-0 rounded-lg mt-4 mb-4" >
                                 <div class="card-header">
                                     <h3 class="text-center font-weight-light my-4">
                                         {{ cadastrando ? 'Cadastro de Novo Usuário' : 'Entrar' }}
