--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
             <main>
                 <div class="container">
                     
-                    <div class="row justify-content-center">
+                    <div class="row">
                         <div class="col-lg-5">
                             <div class="card shadow-lg border-0 rounded-lg mt-4 mb-4" >
                                 <div class="card-header">
